# spot-watch

./: README.md  config.yml  main.py  plot.py  pyproject.toml  request.py  requirements.txt
.github/workflows/: request.yml
docs/: auction_results_2024.csv  day_ahead_auction.html
spot_watch/: config.py  plot.py  request.py
