[tool.poetry]
name = "spot-watch"
version = "0.1.0"
description = ""
authors = ["tdfalc <tomdfalc@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
pytz = "^2024.1"
matplotlib = "^3.9.0"
omegaconf = "^2.3.0"
lxml = "^5.2.2"
requests = "^2.32.3"
plotly = "^5.22.0"
html5lib = "^1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
